--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,6 +59,12 @@ html, body, #root {
   color: var(--white-92);
 }
 
+@media (min-width: 768px) {
+  html, body, #root {
+    overflow: visible;
+  }
+}
+
 button {
   font-family: var(--font);
   cursor: pointer;
